# kafka-emitter-http-rs

./: Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.full.yml  docker-compose.yml  watch-mem.sh
docker/: kafbat.yml  topics.sh
kafka-http-emitter-analyze/: .gitignore  experiment-data.example.json  pyproject.toml
kafka-http-emitter-analyze/src/kafka_http_emitter_analyze/: __init__.py  consts.py  emitter_requests.py  main.py  models.py  typeadapters.py  utils.py
kafka-http-emitter-analyze/src/kafka_http_emitter_analyze/modes/: plotmode.py  simple.py
src/: consumers.rs  main.rs  state.rs
src/models/: measurements.rs  mod.rs
src/routes/: experiment.rs  measurements.rs  messages.rs  mod.rs
