[package]
name = "kafka-http-emitter-rs"
version = "0.1.7"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
bytesize = { version = "2.3.0", features = ["serde"] }
chrono = "0.4.42"
humantime = "2.3.0"
humantime-serde = "1.1.1"
rand = "0.9.2"
rdkafka = { version = "0.38.0", features = ["ssl-vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-fmt = "0.1.1"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
